Nav bar css effect

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
-		<a href="#" class="navbar-brand">DAVID HSIEH</a>
+		<a href="#header" class="navbar-brand">DAVID HSIEH</a>
 		<button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle Navbar">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -33,13 +33,16 @@
 					<a href="#header" class="nav-link">HOME</a>
 				</li>
 				<li class="nav-item">
-					<a href="" class="nav-link">ABOUT</a>
+					<a href="#" class="nav-link">ABOUT</a>
 				</li>
 				<li class="nav-item">
-					<a href="" class="nav-link">PORTFOLIO</a>
+					<a href="#" class="nav-link">PROJECTS</a>
 				</li>
                 <li class="nav-item">
-					<a href="" class="nav-link">CV</a>
+					<a href="#" class="nav-link">CV</a>
+				</li>
+                <li class="nav-item">
+					<a href="#" class="nav-link">CONTACT</a>
 				</li>
 			</ul>
 		</div>
