Add first container and title icon

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>David Hsieh's Personal Website</title>
+    <title>David Hsieh | Software Engineer</title>
+    <link rel="icon" href="images/internet.png">
 </head>
 
 <body>
@@ -50,7 +51,11 @@
 
     <!-- Header -->
     <section id="header" class="container">
-        
+        <div class="row">
+            <div class="Intro">
+                I build software to solve the modern world problems!
+            </div>
+        </div>
 	</section>
 
     <!-- Optional JavaScript -->
