--- a/index.html
+++ b/index.html
@@ -24,40 +24,50 @@
 
 <body>
     <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
-		<a href="#header" class="navbar-brand">DAVID HSIEH</a>
-		<button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle Navbar">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navLinks">
-			<ul class="navbar-nav">
-				<li class="nav-item">
-					<a href="#header" class="nav-link">HOME</a>
-				</li>
-				<li class="nav-item">
-					<a href="#" class="nav-link">ABOUT</a>
-				</li>
-				<li class="nav-item">
-					<a href="#" class="nav-link">PROJECTS</a>
-				</li>
+        <a href="#header" class="navbar-brand">DAVID HSIEH</a>
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle Navbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navLinks">
+            <ul class="navbar-nav">
                 <li class="nav-item">
-					<a href="#" class="nav-link">CV</a>
-				</li>
+                    <a href="#home" class="nav-link">HOME</a>
+                </li>
                 <li class="nav-item">
-					<a href="#" class="nav-link">CONTACT</a>
-				</li>
-			</ul>
-		</div>
-	</nav>
-
-    <!-- Header -->
-    <section id="header" class="container">
-        <div class="row">
-            <div class="Intro">
-                I build software to solve the modern world problems!
-            </div>
+                    <a href="#about" class="nav-link">ABOUT</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">PROJECTS</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">CV</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">CONTACT</a>
+                </li>
+            </ul>
         </div>
-	</section>
+    </nav>
 
+    <!-- Home -->
+    <section id="home" class="home-container">
+        <div class="home-content">
+            <p>I build software.</p>
+            <p>I solve problems in the modern world!</p>
+        </div>
+    </section>
+
+    <!-- About -->
+    <section id="about" class="about-container">
+        <div class="about-content">
+            <h1>ABOUT ME</h1>
+            <div>
+                I am currently a master student in<a href="https://cse.ucsd.edu/"> Computer Science and Engineering, UC San Diego</a>.
+            </div>
+            <div>
+                As a self-taught developer, I am always looking for new challenges and enjoys solving them. 
+                I would love to work in a team among developers and I am always open to new ideas.
+            </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
