--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                     <a href="#about" class="nav-link">ABOUT</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">PROJECTS</a>
+                    <a href="#projects" class="nav-link">PROJECTS</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">CV</a>
+                    <a href="#cv" class="nav-link">CV</a>
                 </li>
                 <li class="nav-item">
-                    <a href="https://www.google.com" class="nav-link">CONTACT</a>
+                    <a href="#contact" class="nav-link">CONTACT</a>
                 </li>
             </ul>
         </div>
@@ -72,13 +72,89 @@
                             As a self-taught developer, I am always looking for new challenges and enjoys solving them.
                             I would love to work in a team among developers and I am always open to new ideas.
                         </p>
+                        <br>
+                        <h3><strong>Skills</strong></h3>
+                        <ul>
+                            <li>
+                                <p>
+                                    <strong>Web Development</strong>
+                                    <br>
+                                    <em>
+                                        HTML5, CSS3, JavaScript(ES6)
+                                    </em>
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <strong>Programming Language</strong>
+                                    <br>
+                                    <em>
+                                        Python, Java
+                                    </em>
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <strong>Tools</strong>
+                                    <br>
+                                    <em>
+                                        Git, Heroku
+                                    </em>
+                                </p>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
             <div class="col-6 order-2 about-content-right">
                 <img class="about-picture" src="images/me.jpg" alt="">
-                <p>While I am not coding, I love shooting photos, listening to 70's rock/classical music and going
-                    outdoors. </p>
+                <p>Besides coding, I love shooting photos, listening to 70's rock/classical music and going
+                    outdoors! </p>
+            </div>
+        </div>
+    </section>
+    <section id="projects" class="section-content col">
+        <h1>PROJECTS</h1>
+        <div class="projects-content row align-items-center">
+            <div class="col-6 order-2 projects-content-right">
+                <div class="row">
+                    <div class="col">
+                        <a href="http://bearmaps-sp19-davidyen.herokuapp.com/map.html">
+                            <h2>BearMaps</h2>
+                        </a>
+                        <p>
+                            A web application that resembles the features of Google Map including <b> rastering</b> ,
+                            <b>routing</b>(finding the shortest path), <b>autocomplete searching</b> and <b>navigation
+                                direction</b> functions.
+                            Implemented all the backend algorithms by Java with front end code and map data from
+                            <a href="https://www.openstreetmap.org/">OpenStreetMap</a> provided as a base.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 order-1 projects-content-left">
+                <div id="bearmap-carousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100"
+                                src="https://camo.githubusercontent.com/03cb1f8d5fb5446e9951c7282df0c4c28bb0d9870dfae1287eec9f4dc1989d9b/68747470733a2f2f692e696d6775722e636f6d2f34494c617270642e6a7067"
+                                alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100"
+                                src="https://camo.githubusercontent.com/ef0e0aa43027c694234476331ac2f93d22ea8bb2d0968d8724a296aeaa6ebd74/68747470733a2f2f692e696d6775722e636f6d2f6e5634716d51732e6a7067"
+                                alt="Second slide">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#bearmap-carousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#bearmap-carousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
