--- a/index.html
+++ b/index.html
@@ -69,15 +69,17 @@
                                 Science and Engineering, UC San Diego</a>.
                         </p>
                         <p>
-                            As a self-taught developer, I am always looking for new challenges and enjoys solving them.
-                            I would love to work in a team among developers and I am always open to new ideas.
+                            As a self-taught developer, I am always open to new ideas, looking for new challenges and
+                            enjoys solving them.
+                            I am capable of learning new skills what my job needed in the fast pace, being a learner and
+                            contributor in every position.
                         </p>
                         <br>
                         <h3><strong>Skills</strong></h3>
                         <ul>
                             <li>
                                 <p>
-                                    <strong>Web Development</strong>
+                                    h <strong>Web Development</strong>
                                     <br>
                                     <em>
                                         HTML5, CSS3, JavaScript(ES6)
@@ -126,6 +128,8 @@
                             A web application that resembles the features of Google Map including <b> rastering</b> ,
                             <b>routing</b>(finding the shortest path), <b>autocomplete searching</b> and <b>navigation
                                 direction</b> functions.
+                        </p>
+                        <p>
                             Implemented all the backend algorithms by Java with front end code and map data from
                             <a href="https://www.openstreetmap.org/">OpenStreetMap</a> provided as a base.
                         </p>
@@ -155,6 +159,96 @@
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
+            </div>
+        </div>
+        <div class="projects-content row align-items-center">
+            <div class="col-6 order-1 projects-content-left">
+                <div class="row">
+                    <div class="col">
+                        <a href="https://www.youtube.com/watch?v=nG5KKAlwMCc&t=1s">
+                            <h2>PM 2.5 Detector</h2>
+                        </a>
+                        <p>
+                            An <b>Android application</b> connected with Arduino air quality sensor by Bluetooth.
+                        </p>
+                        <p>
+                            Users can detect the PM 2.5 level of the their environment without connecting
+                            to the Internet.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 order-2 projects-content-right">
+                <img class="pm25-picture" src="images/pm2.5.jpg" alt="">
+            </div>
+        </div>
+        <div class="projects-content row align-items-center">
+            <div class="col-6 order-2 projects-content-right">
+                <div class="row">
+                    <div class="col">
+                        <a href="https://github.com/davidyen-888/UCB-CS61B/tree/master/hw2">
+                            <h2>Percolation</h2>
+                        </a>
+                        <p>
+                            A percolation system model implemented with <b>Disjoint Sets</b> data structure and
+                            calculate Monte
+                            Carlo simulation to estimate the percolation threshold.
+                        </p>
+                        <p>
+                            With input files or mouse clicking, the visualizer can animates the results of opening sites
+                            in a percolation system.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 order-1 projects-content-left">
+                <div id="percolation-carousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="images/interactive.gif" alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="images/jerry47.gif" alt="Second slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="images/input20.gif" alt="Third slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="images/heart25.gif" alt="Forth slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="images/michael61.gif" alt="Fifth slide">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#percolation-carousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#percolation-carousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="projects-content row align-items-center">
+            <div class="col-6 order-1 projects-content-left">
+                <div class="row">
+                    <div class="col">
+                        <a href="https://www.youtube.com/watch?v=nG5KKAlwMCc&t=1s">
+                            <h2>Weather Bot</h2>
+                        </a>
+                        <p>
+                            An online discord bot coded with Python that can access user's concurrent weather, anytime,
+                            anywhere.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 order-2 projects-content-right">
+                <img class="bot-picture"
+                    src="https://user-images.githubusercontent.com/61106644/124215941-a433d580-db27-11eb-9bdc-87e112f429bc.gif"
+                    alt="">
             </div>
         </div>
     </section>
