Complete prototype, ready for github page deployment

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="row">
                     <div class="col">
                         <p>
-                            Hello! I 'm David, currently a master student in<a href="https://cse.ucsd.edu/"> Computer
+                            <b>Hello! I 'm David</b>, currently a master student in <a href="https://cse.ucsd.edu/">Computer
                                 Science and Engineering, UC San Diego</a>.
                         </p>
                         <p>
@@ -72,7 +72,7 @@
                         <p>
                             I am also capable of learning new skills what my job needed in the fast pace. My goal is to
                             be a learner and
-                            contributor in every position, especially in the field of frontend development.
+                            contributor in every position, especially in the field of <b>frontend development</b>.
                         </p>
                         <br>
                         <h3><strong>Skills</strong></h3>
@@ -257,9 +257,6 @@
     <section id="contact" class="section-content col">
         <h1>CONTACT</h1>
         <div>
-            <h5>Find Me On:</h5>
-        </div>
-        <div>
             <a class="footer-link" href="https://github.com/davidyen-888" target="_blank"
                 aria-label="link to github profile"><i class="fab fa-github-square"></i></a>
             <a class="footer-link" href="https://www.linkedin.com/in/david-hsieh-712648140/" target="_blank"
@@ -267,8 +264,8 @@
             <a class="footer-link" href="mailto:syhsieh@ucsd.edu" target="_blank"><i
                     class="fas fa-envelope-square"></i></a>
             <a class="footer-link" href="Resume__Hsieh, Sung-Yan.pdf" target="_blank"><i class="fas fa-address-card"></i></a>
+            <p>© 2021 David Hsieh</p>
         </div>
-
     </section>
 
     <!-- Optional JavaScript -->
