--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
                 <div class="row">
                     <div class="col">
                         <p>
-                            <b>Hello! I 'm David</b>, currently a master student in <a href="https://cse.ucsd.edu/">Computer
+                            <b>Hello! I 'm David</b>, currently a master student in <a
+                                href="https://cse.ucsd.edu/">Computer
                                 Science and Engineering, UC San Diego</a>.
                         </p>
                         <p>
@@ -121,9 +122,14 @@
             <div class="col-6 order-2 projects-content-right">
                 <div class="row">
                     <div class="col">
-                        <a href="http://bearmaps-sp19-davidyen.herokuapp.com/map.html">
-                            <h2>BearMaps</h2>
-                        </a>
+                        <h2>BearMaps</h2>
+                        <div class="project-link-group" id="project-link">
+                            <a class="github-project-link" href="https://github.com/davidyen-888/bearmaps"><i
+                                    class="fab fa-github"></i></a>
+                            <a class="external-project-link"
+                                href="http://bearmaps-sp19-davidyen.herokuapp.com/map.html"><i
+                                    class="fas fa-external-link-alt"></i></a>
+                        </div>
                         <p>
                             A web application that resembles the features of Google Map including <b> rastering</b> ,
                             <b>routing</b>(finding the shortest path), <b>autocomplete searching</b> and <b>navigation
@@ -165,9 +171,11 @@
             <div class="col-6 order-1 projects-content-left">
                 <div class="row">
                     <div class="col">
-                        <a href="https://www.youtube.com/watch?v=nG5KKAlwMCc&t=1s">
-                            <h2>PM 2.5 Detector</h2>
-                        </a>
+                        <h2>PM 2.5 Detector</h2>
+                        <div class="project-link-group" id="project-link">
+                            <a class="github-project-link" href="https://github.com/davidyen-888/PM2.5-Detector"><i
+                                    class="fab fa-github"></i></a>
+                        </div>
                         <p>
                             An <b>Android application</b> connected with Arduino air quality sensor(PMS3003) by
                             bluetooth module.
@@ -187,9 +195,12 @@
             <div class="col-6 order-2 projects-content-right">
                 <div class="row">
                     <div class="col">
-                        <a href="https://github.com/davidyen-888/UCB-CS61B/tree/master/hw2">
-                            <h2>Percolation</h2>
-                        </a>
+                        <h2>Percolation</h2>
+                        <div class="project-link-group" id="project-link">
+                            <a class="github-project-link"
+                                href="https://github.com/davidyen-888/UCB-CS61B/tree/master/hw2"><i
+                                    class="fab fa-github"></i></a>
+                        </div>
                         <p>
                             A percolation system model implemented with <b>Disjoint Sets</b> data structure and
                             calculate Monte
@@ -236,13 +247,14 @@
             <div class="col-6 order-1 projects-content-left">
                 <div class="row">
                     <div class="col">
-                        <a href="https://github.com/davidyen-888/Discord-Weather-Bot">
-                            <h2>Weather Bot</h2>
-                        </a>
+                        <h2>Weather Bot</h2>
+                        <div class="project-link-group" id="project-link">
+                            <a class="github-project-link" href="https://github.com/davidyen-888/Discord-Weather-Bot"><i
+                                    class="fab fa-github"></i></a>
+                        </div>
                         <p>
-                            An online discord bot coded with Python and hosted on Heroku that can access user's
-                            concurrent weather, anytime,
-                            anywhere.
+                            An online discord bot coded with Python and hosted on Heroku. Respond to user's
+                            concurrent weather, anytime, anywhere.
                         </p>
                     </div>
                 </div>
@@ -257,13 +269,12 @@
     <section id="contact" class="section-content col">
         <h1>CONTACT</h1>
         <div>
-            <a class="footer-link" href="https://github.com/davidyen-888" target="_blank"
-                aria-label="link to github profile"><i class="fab fa-github-square"></i></a>
-            <a class="footer-link" href="https://www.linkedin.com/in/david-hsieh-712648140/" target="_blank"
-                aria-label="link to linkedIn profile"><i class="fab fa-linkedin link"></i></a>
-            <a class="footer-link" href="mailto:syhsieh@ucsd.edu" target="_blank"><i
-                    class="fas fa-envelope-square"></i></a>
-            <a class="footer-link" href="Resume__Hsieh, Sung-Yan.pdf" target="_blank"><i class="fas fa-address-card"></i></a>
+            <a class="footer-link" href="https://github.com/davidyen-888"><i class="fab fa-github-square"></i></a>
+            <a class="footer-link" href="https://www.linkedin.com/in/david-hsieh-712648140/"><i
+                    class="fab fa-linkedin link"></i></a>
+            <a class="footer-link" href="mailto:syhsieh@ucsd.edu"><i class="fas fa-envelope-square"></i></a>
+            <a class="footer-link" href="Resume__Hsieh, Sung-Yan.pdf" target="_parent"><i
+                    class="fas fa-address-card"></i></a>
             <p>© 2021 David Hsieh</p>
         </div>
     </section>
@@ -279,7 +290,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-
+    <!-- Font Awesome JS -->
     <script src="https://kit.fontawesome.com/ece26f3653.js" crossorigin="anonymous"></script>
 </body>
 
