Change intro text to collapse style

--- a/index.html
+++ b/index.html
@@ -61,58 +61,75 @@
             <div class="col-6 order-1 about-content-left">
                 <div class="row">
                     <div class="col">
+                        <h3>
+                            David Hsieh | MSCS@<a href="https://cse.ucsd.edu/">UCSD</a>
+                        </h3>
                         <p>
-                            <b>Hello! I 'm David</b>, currently a master student in <a
-                                href="https://cse.ucsd.edu/">Computer
-                                Science and Engineering, UC San Diego</a>.
+                            <a id="intro-btn" class="btn btn-secondary" data-toggle="collapse" href="#collapse-intro" aria-expanded="false"
+                                aria-controls="collapse-intro">
+                                <strong>Learn more about me</strong>
+                            </a>
                         </p>
+                        <div class="collapse" id="collapse-intro">
+                            <div class="card card-body">
+                                <p>
+                                    As a self-taught developer, I am always open to new ideas, looking for new
+                                    challenges and
+                                    enjoys solving them.
+                                </p>
+                                <p>
+                                    I am also capable of learning new skills what my job needed in the fast pace. My
+                                    goal is to
+                                    be a learner and
+                                    contributor in every position, especially in the field of <b>frontend
+                                        development</b>.
+                                </p>
+                            </div>
+                        </div>
                         <p>
-                            As a self-taught developer, I am always open to new ideas, looking for new challenges and
-                            enjoys solving them.
+                            <a id="intro-btn" class="btn btn-secondary" data-toggle="collapse" href="#collapse-skills" aria-expanded="false"
+                                aria-controls="collapse-skills">
+                                <strong>Skills</strong>
+                            </a>
                         </p>
-                        <p>
-                            I am also capable of learning new skills what my job needed in the fast pace. My goal is to
-                            be a learner and
-                            contributor in every position, especially in the field of <b>frontend development</b>.
-                        </p>
-                        <br>
-                        <h3><strong>Skills</strong></h3>
-                        <ul>
-                            <li>
-                                <p>
-                                    <strong>Web Development</strong>
-                                    <br>
-                                    <em>
-                                        HTML5, CSS3, JavaScript(ES6)
-                                    </em>
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                    <strong>Programming Language</strong>
-                                    <br>
-                                    <em>
-                                        Python, Java
-                                    </em>
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                    <strong>Tools</strong>
-                                    <br>
-                                    <em>
-                                        Git, Heroku
-                                    </em>
-                                </p>
-                            </li>
-                        </ul>
+                        <div class="collapse" id="collapse-skills">
+                            <div class="card card-body">
+                                <ul>
+                                    <li>
+                                        <p>
+                                            <strong>Web Development</strong>
+                                            <br>
+                                            <em>
+                                                HTML5, CSS3, JavaScript(ES6)
+                                            </em>
+                                        </p>
+                                    </li>
+                                    <li>
+                                        <p>
+                                            <strong>Programming Language</strong>
+                                            <br>
+                                            <em>
+                                                Python, Java
+                                            </em>
+                                        </p>
+                                    </li>
+                                    <li>
+                                        <p>
+                                            <strong>Tools</strong>
+                                            <br>
+                                            <em>
+                                                Git, Heroku
+                                            </em>
+                                        </p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="col-6 order-2 about-content-right">
                 <img class="about-picture" src="images/me.jpg" alt="">
-                <p>Besides coding, I love shooting photos, listening to 70's rock/classical music, and going
-                    outdoors! </p>
             </div>
         </div>
     </section>
