--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
                 <div class="row">
                     <div class="col">
                         <h3>
-                            David Hsieh | MSCS@<a href="https://cse.ucsd.edu/">UCSD</a>
+                            <strong>David Hsieh | MSCS@<a href="https://cse.ucsd.edu/">UCSD</a></strong>
                         </h3>
                         <p>
-                            <a id="intro-btn" class="btn btn-secondary" data-toggle="collapse" href="#collapse-intro" aria-expanded="false"
-                                aria-controls="collapse-intro">
-                                <strong>Learn more about me</strong>
+                            <a id="intro-btn" class="btn btn-secondary" data-toggle="collapse" href="#collapse-intro"
+                                aria-expanded="false" aria-controls="collapse-intro">
+                                <strong>Learn more</strong>
                             </a>
                         </p>
                         <div class="collapse" id="collapse-intro">
@@ -87,8 +87,8 @@
                             </div>
                         </div>
                         <p>
-                            <a id="intro-btn" class="btn btn-secondary" data-toggle="collapse" href="#collapse-skills" aria-expanded="false"
-                                aria-controls="collapse-skills">
+                            <a id="intro-btn" class="btn btn-secondary" data-toggle="collapse" href="#collapse-skills"
+                                aria-expanded="false" aria-controls="collapse-skills">
                                 <strong>Skills</strong>
                             </a>
                         </p>
@@ -97,19 +97,19 @@
                                 <ul>
                                     <li>
                                         <p>
-                                            <strong>Web Development</strong>
+                                            <strong>Programming Language</strong>
                                             <br>
                                             <em>
-                                                HTML5, CSS3, JavaScript(ES6)
+                                                JavaScript(ES6), Python, Java
                                             </em>
                                         </p>
                                     </li>
                                     <li>
                                         <p>
-                                            <strong>Programming Language</strong>
+                                            <strong>Technologies</strong>
                                             <br>
                                             <em>
-                                                Python, Java
+                                                HTML5, CSS3, Bootstrap, Git
                                             </em>
                                         </p>
                                     </li>
@@ -118,7 +118,7 @@
                                             <strong>Tools</strong>
                                             <br>
                                             <em>
-                                                Git, Heroku
+                                                VScode, IntelliJ, Heroku
                                             </em>
                                         </p>
                                     </li>
@@ -287,11 +287,9 @@
         <h1>CONTACT</h1>
         <div>
             <a class="footer-link" href="https://github.com/davidyen-888"><i class="fab fa-github-square"></i></a>
-            <a class="footer-link" href="https://www.linkedin.com/in/david-hsieh-712648140/"><i
-                    class="fab fa-linkedin link"></i></a>
+            <a class="footer-link" href="www.linkedin.com/in/david-hsieh-yen"><i class="fab fa-linkedin link"></i></a>
             <a class="footer-link" href="mailto:syhsieh@ucsd.edu"><i class="fas fa-envelope-square"></i></a>
-            <a class="footer-link" href="Resume__Hsieh, Sung-Yan.pdf" target="_parent"><i
-                    class="fas fa-address-card"></i></a>
+            <a class="footer-link" href="Resume__Hsieh, Sung-Yan.pdf"><i class="fas fa-address-card"></i></a>
             <p>© 2021 David Hsieh</p>
         </div>
     </section>
