Add project skillset

--- a/index.html
+++ b/index.html
@@ -87,44 +87,37 @@
                             </div>
                         </div>
                         <p>
-                            <a id="intro-btn" class="btn btn-secondary" data-toggle="collapse" href="#collapse-skills"
-                                aria-expanded="false" aria-controls="collapse-skills">
-                                <strong>Skills</strong>
-                            </a>
+                            <strong>Skills</strong>
+                        <ul>
+                            <li>
+                                <p>
+                                    <strong>Programming Language</strong>
+                                    <br>
+                                    <em>
+                                        JavaScript(ES6), Python, Java
+                                    </em>
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <strong>Technologies</strong>
+                                    <br>
+                                    <em>
+                                        HTML5, CSS3, Bootstrap, Git
+                                    </em>
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <strong>Tools</strong>
+                                    <br>
+                                    <em>
+                                        VScode, IntelliJ, Heroku
+                                    </em>
+                                </p>
+                            </li>
+                        </ul>
                         </p>
-                        <div class="collapse" id="collapse-skills">
-                            <div class="card card-body">
-                                <ul>
-                                    <li>
-                                        <p>
-                                            <strong>Programming Language</strong>
-                                            <br>
-                                            <em>
-                                                JavaScript(ES6), Python, Java
-                                            </em>
-                                        </p>
-                                    </li>
-                                    <li>
-                                        <p>
-                                            <strong>Technologies</strong>
-                                            <br>
-                                            <em>
-                                                HTML5, CSS3, Bootstrap, Git
-                                            </em>
-                                        </p>
-                                    </li>
-                                    <li>
-                                        <p>
-                                            <strong>Tools</strong>
-                                            <br>
-                                            <em>
-                                                VScode, IntelliJ, Heroku
-                                            </em>
-                                        </p>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -155,6 +148,13 @@
                         <p>
                             Implemented all the backend algorithms by Java with front end code and map data from
                             <a href="https://www.openstreetmap.org/">OpenStreetMap</a> provided as a base.
+                        </p>
+                        <p id="skillset">
+                            <span>Java</span>
+                            <span>KDTree</span>
+                            <span>Priority Queue</span>
+                            <span>A* Algorithm</span>
+                            <span>Trie</span>
                         </p>
                     </div>
                 </div>
@@ -201,6 +201,12 @@
                             Users can detect the PM 2.5 level of the their environment without connecting
                             to the Internet.
                         </p>
+                        <p id="skillset">
+                            <span>Java</span>
+                            <span>Arduino</span>
+                            <span>Android Studio</span>
+                            <span>Blender</span>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -226,6 +232,11 @@
                         <p>
                             With input files or mouse clicking, the visualizer can animates the results of opening sites
                             in a percolation system.
+                        </p>
+                        <p id="skillset">
+                            <span>Java</span>
+                            <span>Disjoint Set</span>
+                            <span>Monte Carlo Simulation</span>
                         </p>
                     </div>
                 </div>
@@ -273,6 +284,11 @@
                             An online discord bot coded with Python and hosted on Heroku. Respond to user's
                             concurrent weather, anytime, anywhere.
                         </p>
+                        <p id="skillset">
+                            <span>Python</span>
+                            <span>Discord API</span>
+                            <span>Heroku</span>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -284,10 +300,10 @@
         </div>
     </section>
     <section id="contact" class="section-content col">
-        <h1>CONTACT</h1>
-        <div>
+        <h1>FIND ME ON</h1>
+        <div class="footer-links">
             <a class="footer-link" href="https://github.com/davidyen-888"><i class="fab fa-github-square"></i></a>
-            <a class="footer-link" href="www.linkedin.com/in/david-hsieh-yen"><i class="fab fa-linkedin link"></i></a>
+            <a class="footer-link" href="https://www.linkedin.com/in/david-hsieh-yen/"><i class="fab fa-linkedin link"></i></a>
             <a class="footer-link" href="mailto:syhsieh@ucsd.edu"><i class="fas fa-envelope-square"></i></a>
             <a class="footer-link" href="Resume__Hsieh, Sung-Yan.pdf"><i class="fas fa-address-card"></i></a>
             <p>© 2021 David Hsieh</p>
