Add missing skillset

--- a/index.html
+++ b/index.html
@@ -282,11 +282,12 @@
                         </div>
                         <p>
                             An online discord bot coded with Python and hosted on Heroku. Respond to user's
-                            concurrent weather, anytime, anywhere.
+                            concurrent weather, anytime, anywhere using OpenWeatherMap API.
                         </p>
                         <p id="skillset">
                             <span>Python</span>
                             <span>Discord API</span>
+                            <span>OpenWeatherMap API</span>
                             <span>Heroku</span>
                         </p>
                     </div>
@@ -303,7 +304,8 @@
         <h1>FIND ME ON</h1>
         <div class="footer-links">
             <a class="footer-link" href="https://github.com/davidyen-888"><i class="fab fa-github-square"></i></a>
-            <a class="footer-link" href="https://www.linkedin.com/in/david-hsieh-yen/"><i class="fab fa-linkedin link"></i></a>
+            <a class="footer-link" href="https://www.linkedin.com/in/david-hsieh-yen/"><i
+                    class="fab fa-linkedin link"></i></a>
             <a class="footer-link" href="mailto:syhsieh@ucsd.edu"><i class="fas fa-envelope-square"></i></a>
             <a class="footer-link" href="Resume__Hsieh, Sung-Yan.pdf"><i class="fas fa-address-card"></i></a>
             <p>© 2021 David Hsieh</p>
