Add typing effect and scroll down button, smooth effect not implemented

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="style.css">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>David Hsieh | Software Engineer</title>
+    <title>David Hsieh</title>
     <link rel="icon" href="images/internet.png">
 </head>
 
@@ -49,14 +49,16 @@
     <!-- Home -->
     <section id="home" class="home-container">
         <div class="home-content">
-            <p>I build software.</p>
-            <p>I solve problems in the modern world!</p>
+            <p>I<span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
+        </div>
+        <div>
+            <a href="#about" class="scroll-down" address="true"></a>
         </div>
     </section>
 
     <!-- About -->
     <section id="about" class="section-content col">
-        <h1>ABOUT ME</h1>
+        <h1 >ABOUT ME</h1>
         <div class="about-content row align-items-center">
             <div class="col-6 order-1 about-content-left">
                 <div class="row">
@@ -325,6 +327,8 @@
         crossorigin="anonymous"></script>
     <!-- Font Awesome JS -->
     <script src="https://kit.fontawesome.com/ece26f3653.js" crossorigin="anonymous"></script>
+    <!-- Custom JS -->
+    <script src="app.js"></script>
 </body>
 
 </html>
