--- a/index.html
+++ b/index.html
@@ -49,16 +49,17 @@
     <!-- Home -->
     <section id="home" class="home-container">
         <div class="home-content">
+            <p>Hi! I am David.</p>
             <p>I<span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
         </div>
         <div>
-            <a href="#about" class="scroll-down" address="true"></a>
+            <a href="#about" class="scroll-down"></a>
         </div>
     </section>
 
     <!-- About -->
     <section id="about" class="section-content col">
-        <h1 >ABOUT ME</h1>
+        <h1>ABOUT ME</h1>
         <div class="about-content row align-items-center">
             <div class="col-6 order-1 about-content-left">
                 <div class="row">
@@ -157,6 +158,7 @@
                             <span>Priority Queue</span>
                             <span>A* Algorithm</span>
                             <span>Trie</span>
+                            <span>Heroku</span>
                         </p>
                     </div>
                 </div>
