--- a/index.html
+++ b/index.html
@@ -76,16 +76,17 @@
                         <div class="collapse" id="collapse-intro">
                             <div class="card card-body">
                                 <p>
+                                    I am currently a CS Master's student focusing on the field of
+                                    <b>Human-Computer Interaction</b>.
+                                </p>
+                                <p>
                                     As a self-taught developer, I am always open to new ideas, looking for new
-                                    challenges and
-                                    enjoys solving them.
+                                    challenges and enjoys solving them.
                                 </p>
                                 <p>
                                     I am also capable of learning new skills what my job needed in the fast pace. My
-                                    goal is to
-                                    be a learner and
-                                    contributor in every position, especially in the field of <b>frontend
-                                        development</b>.
+                                    goal is to be a learner and contributor in every position, especially in the field
+                                    of <b>Frontend-development</b>.
                                 </p>
                             </div>
                         </div>
